BUG FIXED. Added more padding to 'page__main' to avoid overlapping 'auth-dropdown' when window height is small

--- a/src/sass/components/_components-page.sass
+++ b/src/sass/components/_components-page.sass
@@ -33,7 +33,7 @@
 		font-size: $font-size--h2
 
 	&__main
-		padding: 5rem 0
+		padding: 8rem 0
 		display: flex
 		align-items: center
 		justify-content: center
